--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,9 @@ show_missing = true
 precision = 2
 omit =
     kw/kiosk/*/tests/*
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise NotImplementedError
