--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r tests-requirements.txt
+        python setup.py install
     - name: Test with tox
       run: |
         python -m tox
@@ -29,7 +30,7 @@ jobs:
         isort --check **/*.py
     - name: Generate coverage report
       run: |
-        python -m pytest tests/ --cov=src/ --cov-report=xml
+        python -m pytest tests/ --cov=src/ --cov=examples/ --cov-branch --cov-report=xml
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
       with:
