--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        poetry-version: [1.1.11]
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -16,21 +17,20 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Run image
+      uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r tests-requirements.txt
-        python setup.py install
-    - name: Test with tox
-      run: |
-        python -m tox
+      run: poetry install
     - name: Static analysis
       run: |
-        black --check --line-length 120 .
-        isort --check **/*.py
+        poetry run black --check --line-length 120 .
+        poetry run isort --check **/*.py
+        poetry run mypy inseminator
     - name: Generate coverage report
       run: |
-        python -m pytest tests/ --cov=src/ --cov=examples/ --cov-branch --cov-report=xml
+        poetry run python -m pytest tests/ --cov=inseminator/ --cov=examples/ --cov-branch --cov-report=xml
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
       with:
