--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ flake8 = "^4.0.1"
 mypy = "^0.910"
 tox = "^3.24.4"
 pytest-cov = "^3.0.0"
+Sphinx = "^4.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
