--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,16 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pydantic = "^1.8.2"
+pydantic = { version = ">1.8,<3.0", optional = true }
+pydantic-settings = { version = "^2.0", optional = true }
+
+[tool.poetry.extras]
+pydanticV2 = ["pydantic-settings"]
+pydanticV1 = ["pydantic"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-black = "^21.10b0"
+black = "^23.9.1"
 isort = "^5.10.0"
 flake8 = "^4.0.1"
 mypy = "^0.910"
